2001-10-05  Jody Goldberg <jgoldberg@home.com>

	* src/application.c (application_init) : Add a matching save icon for
	  the toolbar.

	* src/workbook-control-gui.c (workbook_standard_toolbar) : Use it.
	* src/GNOME_Gnumeric.xml : and here.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/analysis-tools.c (get_data) : teeny tiny fixups.  use
	  prepend/reverse rather than append.  Add an ignore_blanks
	  flag.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/analysis-tools.c (set_cell) : Use value_new_empty in place of an
	  empty string.
	(set_cell_value) : don't clip singletons.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/number-match.c (format_create_regexp) : handle embedded strings
	  properly.

2001-10-04  Jody Goldberg <jgoldberg@home.com>

	* src/workbook-control-gui.c (zoom_changed) : Start searching for the
	  assigned text at the current list item.
	(cb_change_zoom) : adjust to new signal from the gnm_combo_text.
	  Make more error resistant.  Don't reset the content twice.
	(workbook_create_standard_toolbar) : adjsut to new signals from the
	  gnm_combo_text and use the simplified interface.

	* src/clipboard.c (paste_link) : adjust this to link a region not just
	  a single cell so that we can link all the cells, even the blanks.
	(clipboard_paste_region) : simplify and change link handling to ignore
	  the content.

2001-10-03  Jody Goldberg <jgoldberg@home.com>

	* src/application.c (application_clipboard_cut_copy) : merge
	  application_clipboard_cut and application_clipboard_copy.
	  Make the animated cursor optional.

	* src/selection.c (sheet_selection_cut) : interface change.
	(sheet_selection_copy) : ditto.
	* src/commands.c (cmd_ins_del_colrow_undo) : ditto.
	(cmd_ins_del_colrow_redo) : ditto.

2001-10-03  Jody Goldberg <jgoldberg@home.com>

	* src/number-match.c (format_match_create) : ensure we don't compile
	  General.
	  (format_match_init) : no need to filter General here.