@@ -1,3 +1,7 @@
+2001-10-05  Morten Welinder  <terra@diku.dk>
+
+	* Makefile.am: add search dialog.
+
 2001-10-04  Jody Goldberg <jgoldberg@home.com>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=61742
